# tmwa-client-data

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  1981245  Assets - Attributions.txt  CONTRIBUTING.md  Makefile  TestRaim.txt  attributes.xml  avatars.xml  badges.xml  charcreation.xml  chatcommands.txt  deadmessages.xml  ea-skills.xml  effects.xml  elementals.xml  emotes.xml  equipment.xml  equipmentslots.xml  equipmentwindow.xml  features.xml  gmcommands.txt  groups.xml  hair.xml  homunculuses.xml  horses.xml  itemcolors.xml  itemfields.xml  itemoptions.xml  items.xml  items.xsl  languages.xml  license-missing  license.md  license.txt  (+27 more)
graphics/items/: CMakeLists.txt  Makefile.am
graphics/sprites/: CMakeLists.txt  Makefile.am  chest-assassin-female.xml  chest-assassin-male.xml  chest-chainmail-female.xml  chest-chainmail-male.xml  chest-cotton-female.xml  chest-cotton-male.xml  chest-leather-female.xml  chest-leather-male.xml  chest-lightplatemail-female.xml  chest-lightplatemail-male.xml  chest-lightplatemailgold-female.xml  chest-lightplatemailgold-male.xml  chest-robe-female.xml  chest-robe-male.xml  chest-shorttanktop-female.xml  chest-shorttanktop-male.xml  chest-tanktop-female-short.xml  chest-tanktop-female.xml  chest-tanktop-male-short.xml  chest-tanktop-male.xml  chest-terranite-female.xml  chest-terranite-male.xml  chest-tnecksweater-female.xml  chest-tnecksweater-male.xml  chest-vnecksweater-female.xml  chest-vnecksweater-male.xml  chest-warlordplate-female.xml  chest-warlordplate-male.xml  emote.xml  empty.xml  error.xml  feet-assassin-female.xml  feet-assassin-male.xml  feet-boots-basic.xml  feet-boots-female.xml  feet-boots-male.xml  feet-furboots-female.xml  feet-furboots-male.xml  (+232 more)
graphics/sprites/equipment/: angel-wings.xml
graphics/sprites/hairstyles/: hairstyle00-female.xml  hairstyle00-male.xml  hairstyle00.xml  hairstyle01-female.xml  hairstyle01-male.xml  hairstyle01.xml  hairstyle02-female.xml  hairstyle02-male-oversized.xml  hairstyle02-male.xml  hairstyle02-oversized.xml  hairstyle02.xml  hairstyle03-female.xml  hairstyle03-male.xml  hairstyle03.xml  hairstyle04-female.xml  hairstyle04-male.xml  hairstyle04.xml  hairstyle05-female.xml  hairstyle05-male.xml  hairstyle05.xml  hairstyle06-female.xml  hairstyle06-male.xml  hairstyle06.xml  hairstyle07-female.xml  hairstyle07-male.xml  hairstyle07.xml  hairstyle08-female.xml  hairstyle08-male.xml  hairstyle08.xml  hairstyle09-female.xml  hairstyle09-male.xml  hairstyle09.xml  hairstyle10-female.xml  hairstyle10-male.xml  hairstyle10.xml  hairstyle11-female.xml  hairstyle11-male.xml  hairstyle11.xml  hairstyle12-female.xml  hairstyle12-male.xml  (+47 more)
graphics/sprites/icons/: cant-move.xml  feather.xml  green-barrier.xml  haste-potion.xml  healing.xml  hidden.xml  invisible.xml  iron-potion.xml  matk-potion.xml  poison.xml  quest-continue.xml  quest-start.xml  red-rotating-hex.xml  slow-move.xml  slow-poison.xml  spell-attack-generic.xml  spell-cooldown-ar.xml  spell-cooldown-cg.xml  spell-cooldown-ench.xml  spell-cooldown-koy.xml  spell-cooldown-mg.xml  spell-cooldown-mt.xml  spell-cooldown-r.xml  spell-cooldown-sg.xml  spell-cooldown-upmarmu.xml  spell-cooldown.xml  spell-haste.xml  spell-protection-generic.xml  spell-shearing.xml  weight-big.xml  weight-small.xml
graphics/sprites/model/: Gispaan.xml  Gispaan_female.xml  Gispaan_male.xml  Sparron.xml  Sparron_female.xml  Sparron_male.xml  Talponian.xml  Talponian_female.xml  Talponian_male.xml  Tritan.xml  Tritan_female.xml  Tritan_male.xml  base-chestnaked.xml  base.xml  base2.xml  child-in-bed.xml  child.xml  city-emblems.xml  female.xml  male.xml  neutral.xml  oversized.xml  skeleton.xml  soul-menhir.xml  unique.xml  zombie.xml
graphics/sprites/monsters/: MoonMech.xml  SUSAN.xml  archant.xml  ball-lightning.xml  bandit-lord.xml  bandit.xml  bat.xml  bee.xml  beehive.xml  bif.xml  bigbif.xml  bluepar.xml  bobone.xml  brainblow.xml  bunny.xml  butterfly.xml  cave-maggot-giant.xml  cave-maggot.xml  chick.xml  christmas-mouboo.xml  clover.xml  crafty.xml  croc.xml  darkduck.xml  demon.xml  dragon.xml  duck.xml  element-ball.xml  ent.xml  flower.xml  floyd.xml  fluffy.xml  frog-big.xml  frog-small.xml  ghost-pumpkin.xml  goblin-fire.xml  goblin-ice.xml  golem-blackcrystal.xml  golem-crystal.xml  golem-dyable.xml  (+144 more)
graphics/sprites/npcs/: 2006__npcs.xml  airship.xml  anon.xml  blanc.xml  bones.xml  childoutfits.xml  childposes.xml  christmas_npcs.xml  christmastree.xml  dig-01-flow.xml  dig-01-glow.xml  dig-01.xml  dig-02-flow.xml  dig-02-glow.xml  dig-02.xml  dig-03-flow.xml  dig-03-glow.xml  dig-03.xml  dig-04-flow.xml  dig-04-glow.xml  dig-04.xml  elli.xml  evil-obelisk.xml  furnace.xml  griffen-meway-gpl.xml  halifax.xml  hugenpcs.xml  koga.xml  mouboo-injured.xml  nivalis_npc.xml  node-beehive.xml  node-clam-shell.xml  node-clover.xml  node-desert-plant.xml  node-ice.xml  node-mine-vein.xml  node-mushroom.xml  node-plant.xml  npc-annualeaster.xml  npc-beerguyghost.xml  (+54 more)
graphics/sprites/races/: gispaan-child.xml  gispaan-female.xml  (+7 more)
graphics/tiles/: CMakeLists.txt  Contributions from.txt  Makefile.am  christmas.tsx
maps/: .cvsignore  000-0.tmx  001-1.tmx  001-2.tmx  001-3.tmx  001-4.tmx  002-1.tmx  002-2.tmx  002-3.tmx  002-4.tmx  002-5.tmx  003-1.tmx  003-2.tmx  003-4.tmx  004-1.tmx  004-2.tmx  004-3.tmx  004-4.tmx  004-5.tmx  005-1.tmx  005-3.tmx  005-4.tmx  006-1.tmx  006-2.tmx  006-3.tmx  007-1.tmx  007-2.tmx  008-1.tmx  008-2.tmx  008-3.tmx  009-1.tmx  009-2.tmx  009-3.tmx  009-4.tmx  009-5.tmx  009-6.tmx  009-7.tmx  009-8.tmx  010-1.tmx  010-2.tmx  (+191 more)
maps/rules/: rule_cave_001.tmx  rule_cave_002.tmx  rule_cave_003.tmx  rule_cave_004.tmx  rule_cave_005.tmx  rule_cave_006.tmx  rule_cave_007.tmx  rule_icecave_001.tmx  rule_icecave_002.tmx  rule_icecave_003.tmx  rule_icecave_004.tmx  rule_icecave_005.tmx  rule_icecave_006.tmx  rule_icecave_007.tmx  rule_icemountain.tmx  rule_icemountain_002.tmx  rule_icemountain_003.tmx  rule_icemountain_004.tmx  rule_woodland.tmx
sfx/: CMakeLists.txt  Makefile.am
(+3308 files in other folders)
