
mapdir = $(pkgdatadir)/data/maps

map_DATA =			\
	new_1-1.tmx.gz		\
	new_2-1.tmx.gz		\
	new_3-1.tmx.gz		\
	new_4-1.tmx.gz		\
	new_5-1.tmx.gz		\
	new_6-1.tmx.gz		\
	new_7-1.tmx.gz		\
	new_8-1.tmx.gz		\
	new_9-1.tmx.gz		\
	new_10-1.tmx.gz		\
	new_11-1.tmx.gz		\
	new_12-1.tmx.gz		\
	new_13-1.tmx.gz		\
	new_14-1.tmx.gz

EXTRA_DIST =			\
	$(map_DATA)
