SET(FILES
    bat-hit1.ogg
    bow_shoot_1.ogg
    fire-goblin-hit1.ogg
    fire-goblin-hit2.ogg
    fire-goblin-miss1.ogg
    fist-swish.ogg
    flower-hit1.ogg
    flower-hit2.ogg
    flower-miss1.ogg
    fluffy-hit1.ogg
    fluffy-hit2.ogg
    fluffy-hit3.ogg
    fluffy-hurt1.ogg
    fluffy-miss1.ogg
    knife-hit1.ogg
    knife-miss1.ogg
    levelup.ogg
    scorpion-hit1.ogg
    scorpion-hit2.ogg
    scorpion-hit3.ogg
    scorpion-hit4.ogg
    scorpion-miss1.ogg
    short-sword-hit1.ogg
    short-sword-miss1.ogg
    shroom-hit1.ogg
    slime-hit1.ogg
    )

INSTALL(FILES ${FILES} DESTINATION ${DATA_DIR}/sfx)