SET(FILES
    armor-chest-cottonshirt.png
    armor-chest-desertshirt.png
    armor-chest-leathershirt.png
    armor-chest-tnecksweater.png
    armor-chest-vnecksweater.png
    armor-feet-boots.png
    armor-hands-leathergloves.png
    armor-hands-minergloves.png
    armor-hands-scarabarmlet.png
    armor-hands-wintergloves.png
    armor-head-antlerhat.png
    armor-head-axehat.png
    armor-head-bandana.png
    armor-head-christmastree.png
    armor-head-circlet.png
    armor-head-eyepatch.png
    armor-head-fancyhat.png
    armor-head-goggles.png
    armor-head-leathergoggles.png
    armor-head-minershat.png
    armor-head-piratehat.png
    armor-head-pumpkinhelmet.png
    armor-head-rangerhat.png
    armor-head-santabeardhat.png
    armor-head-santahat.png
    armor-head-silkheadband.png
    armor-head-standardheadband.png
    armor-legs-cottonshorts.png
    armor-legs-jeanshorts.png
    armor-shield-bladeshield.png
    armor-shield-britshield.png
    armor-shield-knightshield.png
    armor-shield-leathershield.png
    armor-shield-steelshield.png
    armor-shield-woodenshield.png
    generic-bluehint.png
    generic-bluepresentbox.png
    generic-bottleofsand.png
    generic-bugleg.png
    generic-casinocoins.png
    generic-cavesnakelamp.png
    generic-coinbag.png
    generic-emptybottle.png
    generic-greenhint.png
    generic-greenpresentbox.png
    generic-greyhint.png
    generic-hardspike.png
    generic-magentahint.png
    generic-maggotslime.png
    generic-orangehint.png
    generic-otherbluehint.png
    generic-petal.png
    generic-pinkantennae.png
    generic-purplehint.png
    generic-purplepresentbox.png
    generic-rawlog.png
    generic-redhint.png
    generic-redscorpionstinger.png
    generic-redstocking.png
    generic-scorpionstinger.png
    generic-smallmushroom.png
    generic-tealhint.png
    generic-treasurekey.png
    generic-whitefur.png
    generic-yellowhint.png
    use-food-apple.png
    use-food-beer.png
    use-food-bottleofwater.png
    use-food-cake.png
    use-food-candycane.png
    use-food-candy.png
    use-food-cherrycake.png
    use-food-chickenleg.png
    use-food-chocolatebar.png
    use-food-decorcandy.png
    use-food-easteregg.png
    use-food-gingerbreadman.png
    use-food-milk.png
    use-food-orangecupcake.png
    use-food-roastedmaggot.png
    use-food-xmascake.png
    use-food-xmascandycane.png
    use-potion-cactusdrink.png
    use-potion-cactuspotion.png
    use-potion-concentrationpotion.png
    use-potion-ironpotion.png
    weapon-arrow-arrow.png
    weapon-arrow-iron.png
    weapon-axe-axe.png
    weapon-axe-blacksmithsaxe.png
    weapon-axe-hatchet.png
    weapon-axe-meatcleaver.png
    weapon-bow-bow.png
    weapon-bow-desertbow.png
    weapon-bow-forestbow.png
    weapon-bow-shortbow.png
    weapon-dagger-boneknife.png
    weapon-dagger-dagger.png
    weapon-dagger-knive.png
    weapon-dagger-rockknive.png
    weapon-dagger-setzer.png
    weapon-dagger-sharpknife.png
    weapon-dagger-shortsword.png
    weapon-dagger-stiletto.png
    weapon-mace-club.png
    weapon-polearm-bardiche.png
    weapon-polearm-dualspear.png
    weapon-polearm-halberd.png
    weapon-polearm-heavypike.png
    weapon-polearm-heavyspear.png
    weapon-polearm-pike.png
    weapon-polearm-scorpion.png
    weapon-polearm-spear.png
    weapon-polearm-trident.png
    weapon-staff-crescentrod.png
    weapon-staff-staffoffire.png
    weapon-staff-staffofice.png
    weapon-staff-staffoflife.png
    weapon-sword-baselard.png
    weapon-sword-bastardsword.png
    weapon-sword-beheader.png
    weapon-sword-broadsword.png
    weapon-sword-falchion.png
    weapon-sword-firesword.png
    weapon-sword-jackal.png
    weapon-sword-longsword.png
    weapon-sword-rapier.png
    weapon-sword-sabre.png
    weapon-sword-sandcutter.png
    weapon-sword-scimitar.png
    weapon-sword-sword.png
    weapon-thrown-bonedarts.png
    )

INSTALL(FILES ${FILES} DESTINATION ${DATA_DIR}/graphics/items)
