SET(FILES
	chest-leather-male.png
	chest-leather-male.xml
	chest-leather-female.png
	chest-leather-female.xml
    chest-tnecksweater-male.png
    chest-tnecksweater-male.xml
    chest-tnecksweater-female.png
    chest-tnecksweater-female.xml
    chest-vnecksweater-male.png
    chest-vnecksweater-male.xml
    chest-vnecksweater-female.png
    chest-vnecksweater-female.xml
	emotions.png
	error.png
    hairstyle1.png
    hairstyle1.xml
    hairstyle2.png
    hairstyle2.xml
    hairstyle3.png
    hairstyle3.xml
    hairstyle4.png
    hairstyle4.xml
    hairstyle5.png
    hairstyle5.xml
    hairstyle6.png
    hairstyle6.xml
    hairstyle7.png
    hairstyle7.xml
    item001.png
    item001.xml
    item002.png
    item002.xml
    item004.png
    item004.xml
    item005.png
    item005.xml
    item006.png
    item006.xml
    item007.png
    item007.xml
    item008.png
    item008.xml
    item009.png
    item009.xml
    item010.png
    item010.xml
    item011.png
    item011.xml
    item012.png
    item012.xml
    item013.png
    item013.xml
    item014.png
    item014.xml
    item015.png
    item015.xml
    item016.png
    item016.xml
    item017.png
    item017.xml
    item018.png
    item018.xml
    monster-bat.png
    monster-bat.xml
    monster-flower.png
    monster-flower.xml
    monster-fluffy.png
    monster-fluffy.xml
    monster-ghost-pumpkin.png
    monster-ghost-pumpkin.xml
    monster-goblin-fire.png
    monster-goblin-fire.xml
    monster-maggot-giant.png
    monster-maggot-giant.xml
    monster-maggot.png
    monster-maggot.xml
    monster-mushroom-red.png
    monster-mushroom-red.xml
    monster-mushroom-spiky.png
    monster-mushroom-spiky.xml
    monster-pinkie.png
    monster-pinkie.xml
    monster-scorpion-black.png
    monster-scorpion-black.xml
    monster-scorpion-red.png
    monster-scorpion-red.xml
    monster-scorpion.png
    monster-scorpion.xml
    monster-skull-fire.png
    monster-skull-fire.xml
    monster-skull-poison.png
    monster-skull-poison.xml
    monster-slime-green.png
    monster-slime-green.xml
    monster-slime-red.png
    monster-slime-red.xml
    monster-slime-rudolph.png
    monster-slime-rudolph.xml
    monster-slime-santa.png
    monster-slime-santa.xml
    monster-slime-yellow.png
    monster-slime-yellow.xml
    monster-snake-cave.png
    monster-snake-cave.xml
    monster-snake.png
    monster-snake.xml
    monster-spider.png
    monster-spider.xml
    npcs.png
    npc.xml
    player_female_base.png
    player_female_base.xml
    player_male_base.png
    player_male_base.xml
    weapon0.png
    weapon1.png
    weapon2.png
    weapon-bow.xml
    weapon-dagger.xml
    weapon-fist.xml
    weapon-scythe.xml
    )

INSTALL(FILES ${FILES} DESTINATION ${DATA_DIR}/graphics/sprites)