SET(FILES
    chest-leather-male.png
    chest-leather-male.xml
    chest-leather-female.png
    chest-leather-female.xml
    chest-tnecksweater-male.png
    chest-tnecksweater-male.xml
    chest-tnecksweater-female.png
    chest-tnecksweater-female.xml
    chest-vnecksweater-male.png
    chest-vnecksweater-male.xml
    chest-vnecksweater-female.png
    chest-vnecksweater-female.xml
    emotions.png
    error.png
    hairstyle1.png
    hairstyle1.xml
    hairstyle2.png
    hairstyle2.xml
    hairstyle3.png
    hairstyle3.xml
    hairstyle4.png
    hairstyle4.xml
    hairstyle5.png
    hairstyle5.xml
    hairstyle6.png
    hairstyle6.xml
    hairstyle7.png
    hairstyle7.xml
    head-antlerhat.png
    head-antlerhat.xml
    head-christmastree.xml
    head-christmastreehat.png
    head-rangerhat.png
    head-rangerhat.xml
    head-santabeardhat.png
    head-santabeardhat.xml
    item001.png
    item001.xml
    item002.png
    item002.xml
    item004.png
    item004.xml
    item005.png
    item005.xml
    item006.png
    item006.xml
    item007.png
    item007.xml
    item008.png
    item008.xml
    item009.png
    item009.xml
    item010.png
    item010.xml
    item011.png
    item011.xml
    item012.png
    item012.xml
    item013.png
    item013.xml
    item014.png
    item014.xml
    item015.png
    item015.xml
    item016.png
    item016.xml
    item017.png
    item017.xml
    item018.png
    item018.xml
    npcs.png
    npc.xml
    player_female_base.png
    player_female_base.xml
    player_male_base.png
    player_male_base.xml
    weapon0.png
    weapon1.png
    weapon2.png
    weapon-bow.xml
    weapon-dagger.xml
    weapon-fist.xml
    weapon-scythe.xml
    )

INSTALL(FILES ${FILES} DESTINATION ${DATA_DIR}/graphics/sprites)
