
spritesdir = $(pkgdatadir)/data/graphics/sprites

sprites_DATA =				\
	emotions.png			\
	hairstyle1.png			\
	hairstyle2.png			\
	hairstyle3.png			\
	hairstyle4.png			\
	hairstyle5.png			\
	hairstyle6.png			\
	hairstyle7.png			\
	item001.png			\
	item002.png			\
	items.png			\
	monster0.png			\
	monster1.png			\
	monster2.png			\
	monster3.png			\
	monster4.png			\
	monster5.png			\
	monster6.png			\
	monster7.png			\
	monster8.png			\
	monster9.png			\
	monster10.png			\
	monster11.png			\
	monster12.png			\
	monster13.png			\
	monster14.png			\
	monster15.png			\
	monster16.png			\
	monster17.png			\
	npcs.png			\
	player_female_base.png		\
	player_male_base.png		\
	weapon0.png			\
	weapon1.png

EXTRA_DIST =				\
	$(sprites_DATA)
