
spritesdir = $(pkgdatadir)/data/graphics/sprites

sprites_DATA =				\
	emotions.png			\
	hairstyle1.png			\
	hairstyle1.xml			\
	hairstyle2.png			\
	hairstyle2.xml			\
	hairstyle3.png			\
	hairstyle3.xml			\
	hairstyle4.png			\
	hairstyle4.xml			\
	hairstyle5.png			\
	hairstyle5.xml			\
	hairstyle6.png			\
	hairstyle6.xml			\
	hairstyle7.png			\
	hairstyle7.xml			\
	item001.png			\
	item001.xml			\
	item002.png			\
	item002.xml			\
	item003.png			\
	item003.xml			\
	items.png			\
	monster0.png			\
	monster0.xml			\
	monster1.png			\
	monster1.xml			\
	monster2.png			\
	monster2.xml			\
	monster3.png			\
	monster3.xml			\
	monster4.png			\
	monster4.xml			\
	monster5.png			\
	monster5.xml			\
	monster6.png			\
	monster6.xml			\
	monster7.png			\
	monster7.xml			\
	monster8.png			\
	monster8.xml			\
	monster9.png			\
	monster9.xml			\
	monster10.png			\
	monster10.xml			\
	monster11.png			\
	monster11.xml			\
	monster12.png			\
	monster12.xml			\
	monster13.png			\
	monster13.xml			\
	monster14.png			\
	monster14.xml			\
	monster15.png			\
	monster15.xml			\
	monster16.png			\
	monster16.xml			\
	monster17.png			\
	monster17.xml			\
	monster18.png			\
	monster18.xml			\
	npcs.png			\
	npc.xml			\
	player_female_base.png		\
	player_female_base.xml		\
	player_male_base.png		\
	player_male_base.xml			\
	weapon0.png			\
	weapon1.png			\
	weapons.xml

EXTRA_DIST =				\
	$(sprites_DATA)
