
tilesdir = $(pkgdatadir)/data/graphics/tiles

tiles_DATA =			\
	arena.png		\
	cave.png		\
	collision.png		\
	desert1.png		\
	desert2.png		\
	desert_x2.png		\
	desert_x3.png		\
	inn.png			\
	mountain.png			\
	Woodland_ground.png			\
	Woodland_x2.png			\
	Woodland_x3.png			\
	snow_building.png			\
	snowset.png

EXTRA_DIST =			\
	$(tiles_DATA)
