
tilesdir = $(pkgdatadir)/data/graphics/tiles

tiles_DATA =			\
	arena.png		\
	cave.png		\
	collision.png		\
	desert1.png		\
	desert2.png		\
	desert_x2.png		\
	desert_x3.png		\
	icecave.png		\
	inn.png			\
	mountain.png		\
	snow_building.png		\
	snow_x2.png		\
	snow_x3.png		\
	snowset.png		\
	trans_woodland-desert.png		\
	Woodland_ground.png		\
	Woodland_village.png	\
	Woodland_village_x2.png	\
	Woodland_x2.png			\
	Woodland_x3.png


EXTRA_DIST =			\
	$(tiles_DATA)